--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,6 @@ requires-python = ">=3.9"
 [tool.setuptools.packages.find]
 where = ["src"]
 
-[tool.pytest.ini_options]
-pythonpath = ["src"]
+# [tool.pytest.ini_options]
+# pythonpath = ["src"]
 
