--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,5 @@ requires-python = ">=3.9"
 where = ["src"]
 
 # [tool.pytest.ini_options]
-# pythonpath = ["src"]
+# pythonpath = ["unittest_training"]
 
