--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -23,5 +23,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       
+      - name: Install unittest_training
+        run: |
+          pip install -e .
+      
       - name: Run tests
         run: pytest
