--- a/.github/workflows/callers/formatting_and_linting.yml
+++ b/.github/workflows/callers/formatting_and_linting.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   format_code:
-    uses: .github/workflows/reusable/env_setup.yml
+    uses: ./.github/workflows/reusable/env_setup.yml
     with:
       python-version: "3.13.7"
     steps:
