--- a/.github/workflows/callers/unittests.yml
+++ b/.github/workflows/callers/unittests.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   run_unittests:
-    uses: .github/workflows/reusable/env_setup.yml
+    uses: ./.github/workflows/reusable/env_setup.yml
     with:
       python-version: "3.13.7"
     steps:      
