--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -10,6 +10,10 @@ jobs:
   run_unittests:
     runs-on: ubuntu-latest
     steps:
+      # This step checks out a copy of the repository.
+      - name: Check out repository
+        uses: actions/checkout@v5
+
       - name: Setup environment
         uses: ./.github/actions/env_setup
         with:
