--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Setup environment
-        uses: /.github/actions/env_setup
+        uses: .github/actions/env_setup
         with:
           python-version: "3.13.7"
           
