--- a/.github/workflows/formatting_and_linting.yml
+++ b/.github/workflows/formatting_and_linting.yml
@@ -10,6 +10,9 @@ jobs:
   format_code:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v5
+
       - name: Setup environment
         uses: ./.github/actions/env_setup
         with:
