--- a/.github/actions/env_setup/action.yml
+++ b/.github/actions/env_setup/action.yml
@@ -19,6 +19,8 @@ runs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+      shell: bash
     
     - name: Install projects
       run: pip install -e .
+      shell: bash
