--- a/.github/workflows/formatting_and_linting.yml
+++ b/.github/workflows/formatting_and_linting.yml
@@ -17,6 +17,13 @@ jobs:
         uses: ./.github/actions/env_setup
         with:
           python-version: "3.13.7"
+      
+      - name: Clean workspace
+        run: |
+          rm -rf src/unittest-training
+          find . -type d -name "__pycache__" -exec rm -rf {} +
+        shell: bash
 
       - name: Run black (check only)
         run: black --check .
+        shell: bash
