--- a/.github/actions/env_setup/action.yml
+++ b/.github/actions/env_setup/action.yml
@@ -21,6 +21,6 @@ runs:
         pip install -r requirements.txt
       shell: bash
     
-    # - name: Install project
-    #   run: pip install -e .
-    #   shell: bash
+    - name: Install project
+      run: pip install -e .
+      shell: bash
