Branch 'Mocking' added to CI-triggers in 'unittests.yml' and 'formatting_and_linting.yml'

--- a/.github/workflows/formatting_and_linting.yml
+++ b/.github/workflows/formatting_and_linting.yml
@@ -2,9 +2,9 @@ name: Formatting_and_linting
 
 on:
   push:
-    branches: [main, Fixtures]
+    branches: [main, Fixtures, Mocking]
   pull_request:
-    branches: [main, Fixtures]
+    branches: [main, Fixtures, Mocking]
 
 jobs:
   format_code:
