Branch 'Textfile_Writer' added to CI-Triggers

--- a/.github/workflows/formatting_and_linting.yml
+++ b/.github/workflows/formatting_and_linting.yml
@@ -2,9 +2,9 @@ name: Formatting_and_linting
 
 on:
   push:
-    branches: [main, Fixtures, Mocking]
+    branches: [main, Fixtures, Mocking, Textfile_Writer]
   pull_request:
-    branches: [main, Fixtures, Mocking]
+    branches: [main, Fixtures, Mocking, Textfile_Writer]
 
 jobs:
   format_code:
