--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -2,9 +2,9 @@ name: Unittests
 
 on:
   push:
-    branches: [main, Fixtures, Mocking]
+    branches: [main, Fixtures, Mocking, Textfile_Writer]
   pull_request:
-    branches: [main, Fixtures, Mocking]
+    branches: [main, Fixtures, Mocking, Textfile_Writer]
 
 jobs:
   run_unittests:
